--- a/platformio.ini
+++ b/platformio.ini
@@ -17,4 +17,4 @@ lib_deps =
 	adafruit/Adafruit Unified Sensor@^1.1.15
 	jrowberg/I2Cdevlib-MPU6050@^1.0.0
 	mikalhart/TinyGPSPlus@^1.1.0
-	adafruit/Adafruit_VL53L0X@^1.2.4
+	pololu/VL53L1X@^1.3.1
